Added backgrounds, changes some css, and added information about myself

--- a/main.html
+++ b/main.html
@@ -3,7 +3,10 @@
 
 <head>
     <link rel="stylesheet" type="text/css" href="main.css">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0-beta/css/materialize.min.css">
 
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0-beta/js/materialize.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/underscore.js/1.8.3/underscore-min.js"></script>
 </head>
@@ -12,21 +15,37 @@
     <div class="container">
         <section class="background">
             <div class="content-wrapper">
-                <p class="content-title">Full Page Parallax Effect</p>
-                <p class="content-subtitle">Scroll down and up to see the effect!</p>
+                <p class="content-title">Full Stack FHIR Developer</p>
+                <p class="content-subtitle">Steven (XiaoYi) Li</p>
+                <br>
+                <br>
+                <p class="bot-align">Scroll down to find out more about me</p>
+                <i class="medium material-icons">expand_more</i>
             </div>
         </section>
         <section class="background">
             <div class="content-wrapper">
-                <p class="content-title">Cras lacinia non eros nec semper.</p>
-                <p class="content-subtitle">Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Cras ut massa
-                    mattis nibh semper pretium.</p>
+                <p class="content-title">High mastery in FHIR standard</p>
+                <p class="content-subtitle">Worked against simulated FHIR data with FHIR-based data repository (Smile CDR) and various of web application utilizing said data.</p>
+                <br>
+                <br>
+                <br>
+                <i class="medium material-icons">expand_more</i>
             </div>
         </section>
         <section class="background">
             <div class="content-wrapper">
-                <p class="content-title">Etiam consequat lectus.</p>
-                <p class="content-subtitle">Nullam tristique urna sed tellus ornare congue. Etiam vitae erat at nibh aliquam dapibus.</p>
+                <p class="content-title">Experienced Full Stack Web Application Developer</p>
+                <p class="content-subtitle">
+                    Strong knowledge in different layers of full stack development.
+                    <br>
+                    Worked with servers hosting both Smile CDR server as well as the we apps, utilizing docker, Nginx and PostgreSQL database.
+                    <br>
+                    Experience with Angular 2 and above, utilizing libraries such as JQuery, Materilize CSS, and Tablesaw. Successfully implemented hooks to intergrade Smile CDR to the applications.
+                </p>
+                <br>
+                <p class="bot-align">Scroll down for my contact information and more</p>
+                <i class="medium material-icons">expand_more</i>                
             </div>
         </section>
     </div>
