Added contact page, and ironed out some css and formating

--- a/main.html
+++ b/main.html
@@ -18,19 +18,21 @@
                 <p class="content-title">Full Stack FHIR Developer</p>
                 <p class="content-subtitle">Steven (XiaoYi) Li</p>
                 <br>
-                <br>
-                <p class="bot-align">Scroll down to find out more about me</p>
-                <i class="medium material-icons">expand_more</i>
+                <div class="bot-align">
+                    <p class="no-pad">Scroll down to find out more about me</p>
+                    <i class="medium material-icons">expand_more</i>
+                </div>
             </div>
         </section>
         <section class="background">
             <div class="content-wrapper">
                 <p class="content-title">High mastery in FHIR standard</p>
-                <p class="content-subtitle">Worked against simulated FHIR data with FHIR-based data repository (Smile CDR) and various of web application utilizing said data.</p>
+                <p class="content-subtitle">Worked against simulated FHIR data with FHIR-based data repository (Smile CDR) and various of web application
+                    utilizing said data.</p>
                 <br>
-                <br>
-                <br>
-                <i class="medium material-icons">expand_more</i>
+                <div class="bot-align">
+                    <i class="medium material-icons">expand_more</i>
+                </div>
             </div>
         </section>
         <section class="background">
@@ -38,14 +40,37 @@
                 <p class="content-title">Experienced Full Stack Web Application Developer</p>
                 <p class="content-subtitle">
                     Strong knowledge in different layers of full stack development.
-                    <br>
-                    Worked with servers hosting both Smile CDR server as well as the we apps, utilizing docker, Nginx and PostgreSQL database.
-                    <br>
-                    Experience with Angular 2 and above, utilizing libraries such as JQuery, Materilize CSS, and Tablesaw. Successfully implemented hooks to intergrade Smile CDR to the applications.
+                    <div class="colwrapper">
+                        <div class="col1">
+                            <p class="underline">Server and Databases</p>
+                            <br> Worked with servers hosting both Smile CDR server as well as the web apps, utilizing docker,
+                            Nginx and PostgreSQL database.</div>
+                        <div class="col2">
+                            <p class="underline">Back-End</p>
+                            <br>Successfully implemented hooks to intergrade Smile CDR to the applications.</div>
+                        <div class="col3">
+                            <p class="underline">Front-End</p>
+                            <br> Experience with Angular 2 and above, utilizing libraries such as JQuery, Materilize CSS, and
+                            Tablesaw.</div>
+                    </div>
                 </p>
                 <br>
-                <p class="bot-align">Scroll down for my contact information and more</p>
-                <i class="medium material-icons">expand_more</i>                
+                <div class="bot-align">
+                    <p class="no-pad">Scroll down for my contact information and more</p>
+                    <i class="medium material-icons">expand_more</i>
+                </div>
+            </div>
+        </section>
+        <section class="background">
+            <div class="content-wrapper">
+                <p class="content-title">Ways to contacts me</p>
+                <p class="content-subtitle">
+                    E-mail: stevenli_8118@hotmail.com
+                    <br>Phone: 647-922-6883
+                    <br>Linkedin: <a href="https://www.linkedin.com/in/xiaoyi-steven-li-full-stack" target="_blank">www.linkedin.com/in/xiaoyi-steven-li-full-stack</a>
+                </p>
+                <br>
+                <p class="no-pad"></p>
             </div>
         </section>
     </div>
