made the favicon show up

--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 <html>
 
 <head>
+    <link rel="shortcut icon" type="image/png" href="favicon.png">
+
     <link rel="stylesheet" type="text/css" href="main.css">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0-beta/css/materialize.min.css">
@@ -51,7 +53,8 @@
                         <div class="col3">
                             <p class="underline">Front-End</p>
                             <br> Experience with Angular 2 and above, utilizing libraries such as JQuery, Materilize CSS, and
-                            Tablesaw.</div>
+                            Tablesaw.
+                        </div>
                     </div>
                 </p>
                 <br>
@@ -67,7 +70,8 @@
                 <p class="content-subtitle">
                     E-mail: stevenli_8118@hotmail.com
                     <br>Phone: 647-922-6883
-                    <br>Linkedin: <a href="https://www.linkedin.com/in/xiaoyi-steven-li-full-stack" target="_blank">www.linkedin.com/in/xiaoyi-steven-li-full-stack</a>
+                    <br>Linkedin:
+                    <a href="https://www.linkedin.com/in/xiaoyi-steven-li-full-stack" target="_blank">www.linkedin.com/in/xiaoyi-steven-li-full-stack</a>
                 </p>
                 <br>
                 <p class="no-pad"></p>
