changed first page

--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
     <div class="container">
         <section class="background">
             <div class="content-wrapper">
-                <p class="content-title">Full Stack FHIR Developer</p>
-                <p class="content-subtitle">Steven (XiaoYi) Li</p>
+                <p class="content-title">Hi, I'm Steven (XiaoYi) Li</p>
+                <p class="content-subtitle">And I'm a Full Stack FHIR Developer</p>
                 <br>
                 <div class="bot-align">
                     <p class="no-pad">Scroll down to find out more about me</p>
